# xkcd.py

./: .pylintrc  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  pyproject.tonl  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  unittest.yml
docs/: conf.py  index.rst
examples/: download_all.py
tests/: test_comic.py  test_what_if.py
xkcd/: __init__.py  comic.py  what_if.py
