[tool.poetry]
name = "xkcd.py"
version = "1.0.4"
description = "A basic API wrapper for xkcd."
authors = ["Infiniticity <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Infiniticity/xkcd.py/"
documentation = "https://xkcd.readthedocs.io/"
keywords = ["python", "xkcd"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["xkcd"]

[tool.poetry.dependencies]
beautifulsoup4 = "4.11.*"
requests = "2.27.*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Infiniticity/xkcd.py/issues"
