[tool.poetry]
name = "xkcd.py"
version = "1.1.0"
description = "A basic API wrapper for xkcd."
authors = ["Ombucha <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Ombucha/xkcd.py/"
documentation = "https://xkcd.readthedocs.io/"
keywords = ["python", "xkcd", "what if", "comics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["xkcd"]

[tool.poetry.dependencies]
beautifulsoup4 = "*"
requests = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ombucha/xkcd.py/issues"
